<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="tweet_text">What is on your mind?</string>
    <string name="tweet_button">Tweet</string>
    <string name="tweet_1">I am the most recent tweet</string>
    <string name="tweet_2">I am an old tweet</string>
    <string name="tweet_3">I am ancient</string>
    <string name="welcome">Welcome to Mobile Twitter!</string>
    <string name="logout">Logout</string>
    <string name="change">Change Password</string>
	<string name="add">Add friend</string>
	<string name="friends">Friends\' Tweets</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="register">Register</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="username">User Name</string>
    <string name="pwd">Password</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="secQ">Security Question</string>
    <string name="secP">Security Answer</string>
    <string name="join">Join Twitter!</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="submit">Submit</string>
	<string name="forgot_pass_text">Forgot Password?</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="confirm">Confirm Password</string>

</resources>
