<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.twitter.HomeActivity" >
    
    <EditText
        android:id="@+id/tweetText"
        android:layout_width="275dp"
        android:layout_height="67dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/tweetBtn"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="200dp"
        android:text="@string/tweet_button"
        android:textSize="13sp" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tweetText"
        android:layout_below="@+id/tweetBtn" >

    </ListView>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignRight="@+id/listView1"
        android:text="@string/logout"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/searchFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tweetText"
        android:layout_alignRight="@+id/tweetText"
        android:layout_below="@+id/changePass"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/AddFriend"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignRight="@+id/tweetBtn"
        android:layout_below="@+id/searchFriends"
        android:text="@string/add"
        android:textSize="13sp" />

    <Button
        android:id="@+id/changePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/Friends"
        android:layout_centerHorizontal="true"
        android:text="@string/change"
        android:textSize="13sp" />

    <Button
        android:id="@+id/Friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/changePass"
        android:text="@string/friends"
        android:textSize="13sp" />

</RelativeLayout>
