<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.twitter.CreateProfileActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/pwd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_alignLeft="@+id/uname"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_alignTop="@+id/uname_text"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/fname_text"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lname_text"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/uname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lname_text"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/secq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/secq_text"
        android:layout_alignBottom="@+id/secq_text"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/seca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/secp_text"
        android:layout_toRightOf="@+id/fname_text"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/fname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/uname_text"
        android:layout_marginTop="32dp"
        android:text="@string/firstname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="14dp"
        android:text="@string/lastname"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uname"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/secq"
        android:text="@string/pwd"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/confirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/confirmPass"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/secq_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/confirmPass"
        android:layout_marginTop="23dp"
        android:layout_toLeftOf="@+id/submit"
        android:text="@string/secQ"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/confirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/pwd_text"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/submit"
        android:text="@string/confirm_pwd"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/secp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fname_text"
        android:layout_below="@+id/secq_text"
        android:layout_toLeftOf="@+id/submit"
        android:text="@string/secP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seca"
        android:layout_centerHorizontal="true"
        android:text="@string/register" />

</RelativeLayout>