<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.twitter.ForgotPasswordActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="148dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/uname_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/uname"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/uname"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="52dp"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/forgotpass_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/uname_text"
        android:layout_alignLeft="@+id/submit"
        android:layout_marginBottom="51dp"
        android:text="@string/forgot_pass_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>