<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.twitter.ChangePasswordActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/seca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/secp_text"
        android:layout_alignBottom="@+id/secp_text"
        android:layout_alignLeft="@+id/secq"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/secq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/secq_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/secp_text"
        android:layout_alignTop="@+id/secq"
        android:text="@string/secQ"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/secp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/secq_text"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/secq"
        android:text="@string/secP"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/seca"
        android:text="@string/pwd"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/pwd_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/confirm_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/EditText03"
        android:text="@string/confirm"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/EditText03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/confirm_pwd"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPassword"
        android:visibility="invisible" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText03"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp"
        android:text="@string/submit" />

</RelativeLayout>